--- a/config.toml
+++ b/config.toml
@@ -162,9 +162,7 @@ theme = "LoveIt"
   typeit = true
 
 [params.social]
-  GitHub = "akobashikawa"
-  Linkedin = "akobashikawa"
   Twitter = "rulokoba"
-  Instagram = "rulokc"
-  Facebook = "akobashikawa"
+  Instagram = "akc.arte"
+  Facebook = "akc.arte"
   RSS = true
