--- a/config.toml
+++ b/config.toml
@@ -55,11 +55,11 @@ theme = "LoveIt"
     title = ""
     weight = 4
   [[menu.main]]
-    identifier = "antoniokc"
+    identifier = "akcstudio"
     pre = ""
     post = ""
-    name = "AntonioKC"
-    url = "https://antoniokc.netlify.app"
+    name = "AKCStudio"
+    url = "https://akcstudio.com"
     title = ""
     weight = 5
 
